Skip explicit `self` argument when calling via class.

Instance methods can be called via the class:
 `Class.method(instance, arg)`

Self arguments are handled separately. With an explicit `instance`
 argument as in the example, its type was wrongly used for the next
 argument with all subsequent argtypes offset by one.

BUG: 369364

Simply skip such arguments where they exist.

Test `method_explicit_self` previously failed, now passes.

Test `parent_constructor_arg_type` previously failed.
Now it fails on the first run, but gets the correct type if reloading
 the document.
Probably related to https://bugs.kde.org/show_bug.cgi?id=306213

Other new tests passed already.
No test regressions.